--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1838,7 +1838,7 @@ Expected: Message indicating __no enough foods to recommend_ is shown. The _Summ
 .. Test case: `addfood fn/Cucumber ft/nsv ca/15 gi/15 su/1.7 fa/0` +
 Expected: This new food appears at the end of non-starchy vegetables.
 .. Test case: `addfood fn/Cucumber1 ft/f ca/15 gi/15 su/1. fa/.3` +
-Expected: This new food appears at the end of fruits with sugar value of 1 and fa value of 0.3.
+Expected: This new food appears at the end of fruits with sugar value of 1 and fat value of 0.3.
 
 .. Test case: `addfood fn/Cucumber2 ft/nsv f ca/15 gi/15 su/1.7 fa/0` +
 Expected: Message indicating _invalid food type_ is shown.
