Edit tagging in Developer and User Guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -218,6 +218,7 @@ Examples:
 
 * `set 2500`
 
+// tag::report[]
 === Generating a Report: `report`
 
 Want to have your very own report that summarises your calorie intake progress over this month? Here are the steps to create one now!:
@@ -258,6 +259,7 @@ Changing your system time at any point while CaloFit is running may affect the r
 To ensure correct data is displayed to you, allow 2 minutes for CaloFit to update itself before creating your report.
 
 Format: `report`
+// end::report[]
 
 === Notification that a meal is missed
 
