Add manual test display in larry ppp

--- a/docs/team/larrylawl.adoc
+++ b/docs/team/larrylawl.adoc
@@ -90,4 +90,7 @@ include::../DeveloperGuide.adoc[tag=display]
 include::../DeveloperGuide.adoc[tag=addperson]
 
 
+include::../DeveloperGuide.adoc[tag=manualtestdisplay]
+
+
 
