--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -940,6 +940,7 @@ _{ more test cases ... }_
 
 _{ more test cases ... }_
 
+// tag::manualtestdisplay[]
 === Displaying indicators
 
 . Indicators are up to date and shown in the correct format
@@ -957,6 +958,7 @@ Format of indicator should be linechart.
     `display i/gender-breakdown f/barchart` +
     `add n/Sally ic/S0000001J p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 dob/12.12.2000 g/Female` +
    Expected: Number of females should increase by 1. Format of indicator should be barchart.
+// end::manualtestdisplay[]
 
 === Restore deleted items
 
