--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -592,7 +592,11 @@ You should see the search result in the budget list.
 
 To revert the budget list so that all budgets are listed, simply execute `find` without any argument.
 
-=== Loans [Coming in v2.0]
+=== Loans
+
+While managing your finances in a social scenario, one of the most important things to keep track of is how much money is owed to other people and entities.
+
+It is critical to keep track of credit while
 
 ==== Adding new loan: `add`
 
@@ -614,26 +618,6 @@ Examples:
 * `loanpaid i/4 a/4000` +
 Takes input with initialization values and adds them to a list of current unpaid loans.
 
-==== Finding loan: `find`
-
-Shows all loans with certain name or description or date , or all loans +
-Format: `loanshow [s/KEYWORD]`
-
-Examples:
-
-* `loanshow s/charlie` +
-Shows all loans when no keyword is given, when keyword is added, all loans with given dat/name or description are shown.
-
-==== Adding new loan: `total`
-
-Finds and shows nett amount to pay/owed with keyword +
-Format: `loantotal s/KEYWORD`
-
-Examples:
-
-* `loantotal s/12/12/2000` +
-If no keyword is given, it returns total difference in amount owed to other parties and amount to be paid.
-
 ==== Editing new loan: `edit`
 
 Changes existing loan +
@@ -644,15 +628,6 @@ Examples:
 * `loanset i/3 n/Lee d/For food in NY` +
 Takes input with initialization values for current loan identified by index, change any value.
 
-==== Sorting all loans: `sort`
-
-Finds and shows all loans sorted +
-Format: `loansort s/BY`
-
-Examples:
-
-* `loansort s/DATE` +
-Loans shown sorted by any given constrain, date or value owed.
 
 === Analytics
 
